# www.haskell.org

./: .gitignore  .gitlab-ci.yml  .stylelintrc.json  CHANGELOG.md  Haskell Package Quality Assurance Tool  Setup  LICENSE  README.md  about.rst  buildAndWatch  cabal.project  community.html  community.markdown  core-tools.markdown  default.nix  deploy.sh  documentation.html  documentation.markdown  donations.markdown  downloads.html  downloads.markdown  haskell-org-committee.markdown  haskell-org.cabal  index.html  irc.markdown  site.hs
.github/workflows/: deploy.yml  main.yml
builder/: Testimonial.hs  default.nix  haskell-org.cabal  site.hs
css/: hl.css
docs/: resources.markdown
downloads/: linux.markdown  windows.markdown
js/: glider.js  home.js  tryhaskell.pages.js
nix/: sources.json
site/: community.markdown  documentation.markdown  donations.markdown  downloads.markdown  get-started.markdown  haskell-org-committee.markdown  index.html  irc.markdown  mailing-lists.markdown  platform.markdown  security.markdown  start-coding.markdown
site/css/: fonts.css  hl.css
site/haskell-symposium/: default.css  index.html
site/js/: home.js  jquery.console.js  tryhaskell.js  (+1 more)
templates/: default.html  nav.html  testimonials.html
testimonials/: README.md  bellroy.yaml  bitnomial.yaml  calabrio.yaml  centralapp.yaml  company-a.yaml  company-b.yaml  company-d.yaml  company-e.yaml  ebot7.yaml  finn.yaml  fission.yaml  foxhoundsystems.yaml  hasura.yaml  imagineai.yaml  iohk.yaml  mercury.yaml  noredink.yaml  scarf.yaml  serokell.yaml  stackbuilders.yaml
(+56 files in other folders)
