name:               haskell-org
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            BSD3
license-file:       LICENSE

executable haskell-org-site
  main-is:          site.hs
  other-modules:    Testimonial
  build-depends:    base == 4.*
                  , hakyll >=4.12 && <4.14
                  , time
                  , filepath
                  , yaml
                  , aeson
                  , bytestring
                  , text
                  , random
                  , binary
  ghc-options:      -threaded
  default-language: Haskell2010
